<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/searchLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:paddingHorizontal="4dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/username_hint">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="4dp"
                    android:inputType="text"
                    android:singleLine="true"
                    android:lines="1"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>
            <EditText
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:paddingHorizontal="4dp"
                android:maxLines="1"
                android:hint="@string/username_hint"
                android:layout_weight="3">
            </EditText>

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/button_submit">
            </Button>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/reposList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchLayout" />

        <TextView
            android:id="@+id/listError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_loading_data"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/reposList"
            app:layout_constraintTop_toTopOf="@+id/reposList"
            android:visibility="gone"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/reposList"
            app:layout_constraintEnd_toEndOf="@+id/reposList"
            app:layout_constraintStart_toStartOf="@+id/reposList"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>